src/App.css
.navbar{
  width: 100%;
  padding: 0.5em;
  background-color: #000000de;

}

nav a{
  color: #fff;
  font-size: 1.2em;
  padding: 5px;
  font-family: Arial, Helvetica, sans-serif;
  transition: all 0.5s ease;
  border-radius: 15px;
}



nav a:hover{
  transform: scale(1.2);
  background-color: #fff;
  color: #000;

}

nav{
  width: min(90vw,650px);
  margin: 0 auto;
  display: flex;
  justify-content: space-between;
}



a{
  text-decoration: none;
}


#Home{
  width: 100%;
  color: #fff;
  min-height: 1000px;
  display: flex;
  justify-content: center;
  align-items: flex-start;
  position: relative;
}



.background{
  position: absolute;
  width: 100%;
  height: 100%;
  z-index: -1;
  left: 0;
  top: 0;
  transition: background-image 1s linear;
  -webkit-backface-visibility: hidden
}





.interests{
  position: absolute;
  margin: 0 auto;
  text-align: center;
  width: 90%;
  top: 5%;


}


.self{
   width: min(550px, 90vw);
}


.card{
  width: 100%;
  padding: 1em;
  background-color: aquamarine;
  color: #000;
  gap: 15px;
  border-radius: 30px;
  position: relative;
  transition: transform 0.5s ease;
}

.card p{
   font-size: 1.2em;
   line-height: 25px;
}


.card:hover{
  transform: scale(1.1);
}

.card h2, .card p{
  margin: 0.5em 0;
}



.links img{
  width: 30px;
  height: 30px;
  transition: transform 0.5s ease;
}

.links img{
  margin-right: 15px;
}


.links img:hover{
  transform: scale(1.2);
}


.profile{
  width: 100%;
  animation: showUp 2s ease-in forwards;
}

.cursor{
  height: 100%;
  width: 5px;
  background-color: #fff;
  animation: blink 1s step-end infinite;
}

.type{
   font-size: 1.3em;
   font-family :cursive,sans-serif;
}


#Projects{
  width: 100%;
  background-color: #000000e1;
  color: #fff;
  padding: 2.5em;
}

#Projects h1{
  text-align: center;
  margin-bottom: 1.4em;
  font-size: 2.5em;
}

.projectContainer{
  margin: 0 auto;
  display: flex;
  justify-content: center;
  flex-wrap: wrap;
  width: 90%;
  gap: 1.5em;
}


.project{
  width: max(400px, 25vw);
  border-radius: 25px;
  position: relative;
}


.container{
  --rotatex : 0deg;
  --rotatey : 0deg;
  --default-rotate : 10deg;
  transform: perspective(700px) rotateY(var(--rotatey)) rotateX(var(--rotatex));
  transition: transform 0.5s;
}

.spot{
   width: calc(100% / 3);
   height: calc(100% / 2);
   display: inline-block;
   position: absolute;
   z-index: 1;
}

.spot:nth-child(1){
  top: 0;
  left: 0;
}

.spot:nth-child(2){
  top: 0;
  left: calc(100% / 3);
}

.spot:nth-child(3){
  top: 0;
  right: 0;
}
.spot:nth-child(4){
  left: 0;
  bottom: 20%;
}
.spot:nth-child(5){
  bottom: 20%;
  left: calc(100% / 3);
}

.spot:nth-child(6){
  bottom: 20%;
  right: 0;
}

.spot:nth-child(1):hover ~ .container{
   --rotatex : var(--default-rotate);
   --rotatey : calc(var(--default-rotate) * -1);
}

.spot:nth-child(2):hover ~ .container{
  --rotatex : var(--default-rotate);
}

.spot:nth-child(3):hover ~ .container{
  --rotatex : var(--default-rotate);
  --rotatey : var(--default-rotate);
}

.spot:nth-child(4):hover ~ .container{
  --rotatex : calc(var(--default-rotate) * -1);
  --rotatey : calc(var(--default-rotate) * -1);
}

.spot:nth-child(5):hover ~ .container{
  --rotatex : calc(var(--default-rotate) * -1);
}

.spot:nth-child(6):hover ~ .container{
  --rotatex : calc(var(--default-rotate) * -1);
  --rotatey : var(--default-rotate);
}




.imgContainer{
  width: 100%;
}

.imgContainer img{
  width: 100%;
  border-radius: 15px 15px 0 0;
  transform: translateY(2%);
}


.toolsUsed img{
  width: 30px;
  height: 30px;
}

.projectdetails{
  background-color: #fff;
  color: #000;
  display: flex;
  flex-direction: column;
  font-family :'Courier New', Courier, monospace;
  gap: 5px;
  padding: 1em;
  border-radius: 0 0 15px 15px;
}

.projectdetails h3{
  text-align: center;
}

.toolsUsed{
  width: 50%;
  margin: 0 auto;
  display: flex;
  justify-content: center;
  gap: 10px;
}


.btns a{
  text-decoration: none;
  color: inherit;
}


.btns{
  display: flex;
  justify-content: space-between;
  font-family: inherit;
}

.btns button{
  width: 45%;
  height: 25px;
  border-radius: 5px;
  border: none;
  color: #000;
}


.btns button:hover{
  transform: scale(1.2);
  background-color: #000;
  color: #fff;
}


button a{
  display: inline-block;
  width: 100%;
}




#Contact{
  width: 100%;
  min-height: 800px;
  background-color: #1b133a;
  color: #000;
  position: relative;
  display: flex;
  justify-content: center;
  align-items: center;
  padding: 2em;
  overflow: hidden;
}


#Contact h2{
  margin-top: 1em;
  margin-bottom: 2em;
}

#Contact form{
  padding: 2.5em;
  width: min(550px, 98%);
  text-align: center;
  background-color: rgb(255, 255, 255);
  border-radius: 20px;
}

.inputBox{
  margin: 1.5em auto;
  width: 95%;
}



input{
  width: 100%;
  height: 20px;
  padding: 20px;
  border: 2px solid #ddd;
  outline: none;
  border-radius: 15px;
  font-size: 1em;
}


textarea{
  width: 100%;
  height: 200px;
  padding: 20px;
  font-size: 1.5em;
  border: 2px solid #ddd;
  outline: none;
  border-radius: 15px;
  resize: none;
}


.send{
  width: 100%;
  padding: 10px 0;
  border: none;
  outline: none;
  border-radius: 15px;
  background-color: #291f4e;
  color: #fff;
  cursor: pointer;
  box-shadow: 0 0 10px rgba(0,0,0,.1);
}


.send:hover{
  background-color: #624ec6;
}


.snowflake{
  position: absolute;
  width: 15px;
  height: 15px;
  border-radius: 50%;
  border: none;
  outline: none;
  background-color: snow;
  top: -100px;
  animation: snowing 5s infinite ease-in-out;
}


.snowflake:nth-child(1){
  left: 7%;
}

.snowflake:nth-child(2){
  left: 10%;
  animation-delay: 3s;
}

.snowflake:nth-child(3){
  left: 20%;
  animation-delay: 2s;
}

.snowflake:nth-child(4){
  left: 30%;
  animation-delay: 5s;
}

.snowflake:nth-child(5){
  left: 32%;
  animation-delay: 4s;
}


.snowflake:nth-child(6){
  left: 65%;
  animation-delay: 3s;
}

.snowflake:nth-child(7){
  left: 69%;
  animation-delay: 6s;
}

.snowflake:nth-child(8){
  left: 75%;
  animation-delay: 2s;
}

.snowflake:nth-child(9){
  left: 80%;
  animation-delay: 3s;
}

.snowflake:nth-child(10){
  left: 86%;
}

.snowflake:nth-child(11){
  left: 94%;
  animation-delay: 1s;
}




@keyframes snowing {
  0%{
    top: -50px;
  }

  100%{
    top: 105%;
    opacity: 0.5;
  }
}










@keyframes blink {
  from, to{border-right: 0.15em solid orange;}
  50%{
    border-right: none;
  }
}

@keyframes showUp {
  0%{
    transform: translateY(25%);
  }
  100%{
    transform: translateY(1%);
  }
}


@media (max-width : 630px) {
      #Home{
        align-items: center;
      }
}




@media (max-width : 1000px){

  .background{
    animation: imagePan 15s linear infinite;
  }
  @keyframes imagePan {
    0% {
      background-position: left center;
    }
    50%{
      background-position: right center;
    }
    100%{
      background-position: left center;
    }
  }
}

